# archculars

./: Cargo.toml  PKGBUILD  README.md
.cargo/: config.toml
examples/: smoke.rs
src/: app.rs  cli.rs  lib.rs  main.rs  theme.rs
src/app/: install.rs
src/core/: alpm.rs  aur.rs  cache.rs  deps.rs  mod.rs  models.rs  news.rs  orphans.rs  pacman.rs
src/ui/: deps_modal.rs  footer.rs  info.rs  install_modal.rs  mod.rs  news_modal.rs  pkgbuild_modal.rs  search.rs  stats_modal.rs  table.rs  updates_modal.rs
website/src/: app.html
website/src/lib/: content.ts
